force-app/main/default/objects/ChildObject__c/ChildObject__c.object-meta.xml
<CustomObject>
    <description>This is the child object for the ParentObject__c</description>
    <label>Child Object</label>
    <nameField>
        <label>Child Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>