force-app/main/default/objects/ChildObject__c/fields/ParentObject__c.field-meta.xml
<CustomField>
    <fullName>ParentObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field for relationship purposes to the ParentObject__c</description>
    <label>Parent Object</label>
    <referenceTo>ParentObject__c</referenceTo>
    <relationshipLabel>Child Objects</relationshipLabel>
    <relationshipName>Child_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>