force-app/main/default/objects/ChildObject__c/fields/Relationship_Age__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Age__c</fullName>
    <description>Field to store numbers for validation rules tests</description>
    <label>Relationship Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>