force-app/main/default/objects/ChildObject__c/fields/WhoIsYourFather__c.field-meta.xml
<CustomField>
    <fullName>WhoIsYourFather__c</fullName>
    <externalId>true</externalId>
    <label>Who Is Your Father?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>