force-app/main/default/objects/ChildObject__c/validationRules/Not_possible_more_thant_100_years.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_possible_more_thant_100_years</fullName>
    <active>true</active>
    <errorConditionFormula>Relationship_Age__c &gt; 100</errorConditionFormula>
    <errorMessage>Not possible more than 100 years relationship;</errorMessage>
</ValidationRule>