force-app/main/default/objects/ChildObject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ParentObject__c</columns>
    <columns>RelationshipAge__c</columns>
    <columns>WhoIsYourFather__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>